# 2025-theta-neurons-delay-experiments

./: LICENSE.MIT.txt  README.md  justfile  pyproject.toml  requirements.txt
experiments/: attractor-classification.py  default.mplstyle  parameters-paper.toml  theta-neurons.py  thetalib.py  type1-dirac-tau-and-l1-with-hopf-boundary.py  type1-equilibria-and-tau-plots.py  type2-center-regions-and-tau1-l1.py
