[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.10",
]

[project]
name = "theta-neurons"
version = "2025.1"
description = "Simulations of theta neurons"
keywords = [
    "Complex systems theory",
    "Oscillators",
    "Phase transitions",
]
license = "MIT"
maintainers = [ { name = "Alexandru Fikl", email = "alexfikl@gmail.com" } ]
authors = [ { name = "Alexandru Fikl", email = "alexfikl@gmail.com" } ]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "jitcdde>=1.8",
    "matplotlib>=3.10",
    "numpy>=2.4",
    "orbitkit @ git+https://github.com/alexfikl/orbitkit.git#egg=orbitkit",
    "rich>=13.0",
    "scipy>=1.17",
]
urls.Repository = "https://github.com/alexfikl/2025-theta-neurons-delay-experiments"

[dependency-groups]
dev = [
    "pyproject-fmt",
    "ruff",
    "ty",
]

[tool.hatch]
metadata.allow-direct-references = true

[tool.ruff]
line-length = 88
preview = true
lint.select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # flake8
    "F",   # flake8
    "FBT", # flake8-boolean-trap
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "NPY", # numpy
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RUF", # ruff
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "TC",  # flake-type-checking
    "UP",  # pyupgrade
    "W",   # flake8
]
lint.ignore = [
    "A005",    # shadowing-builtin-module
    "C409",    # incorrectly-parenthesized-tuple-in-subscript
    "E203",    # whitespace-before-punctuation
    "E402",    # module-import-not-at-top-of-file
    "ISC001",  # single-line-implicit-string-concatenation
    "N803",    # non-lowercase-argument
    "N806",    # non-lowercase-variable-in-function
    "PLC0415", # import-outside-top-level
    "PLC2801", # unnecessary-dunder-call
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-locals
    "PLR0915", # too-many-statements
    "PLR0917", # too-many-positional
    "PLR2004", # magic-value-comparison
    "PLR6104", # non-augmented-assignment
    "PLR6301", # no-self-use
    "PLW0717", # too-many-statements-in-try
    "S101",    # assert
    "S102",    # exec-builtin
    "UP037",   # quoted-annotation
]
lint.flake8-quotes.docstring-quotes = "double"
lint.flake8-quotes.inline-quotes = "double"
lint.flake8-quotes.multiline-quotes = "double"
lint.isort.force-wrap-aliases = true
lint.isort.known-first-party = [
    "jitcdde",
    "orbitkit",
]
lint.isort.required-imports = [
    "from __future__ import annotations",
]

[tool.typos]
files.extend-exclude = [
    "*.nb",
]
default.extend-words.criticals = "criticals"
default.extend-words.ND = "ND"
